Fixes margin on add to cart buttons on mobile
Allows for responsive design on mobile devices by removing margin on
applicable buttons

--- a/assets/styles/media-queries.scss
+++ b/assets/styles/media-queries.scss
@@ -12,6 +12,10 @@
     font-size: 17px;
   }
 
+  .addMarg {
+    margin: auto;
+  }
+
   // .button.btn.btn-transparent.btn-lg.dropdown-toggle {
   //   margin-top: .36em;
   //   font-size: 18px;
